# sdiff-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/: 2025-10-28-github-ci-workflow-design.md
src/: diff.rs  error.rs  filter.rs  git.rs  lib.rs  main.rs  output.rs  parser.rs  tree.rs
tests/: diff_tests.rs  error_tests.rs  filter_tests.rs  git_tests.rs  integration_tests.rs  output_tests.rs  parser_tests.rs  tree_tests.rs
tests/fixtures/: added_new.json  array_new.json  array_old.json  formatting_new.json  identical_2.json  invalid.txt  large.json  mixed.json  mixed.yaml  modified_new.json  modified_old.json  nested_new.json  nested_old.json  removed_new.json  removed_old.json
